# SWEB

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WebServer.cpp
includes/: CSP.h  Cookie.h  DefaultPage.h  E404.h  HSTS.h  HTMLResponse.h  Header.h  Route.h  Router.h  Server.h  StaticPage.h  URLParameter.h  Utilities.h  WebSession.h  XFrame.h  session.h
pages/: DefaultPage.cpp  E404.cpp  StaticPage.cpp
static/: sample.html
system/: HSTS.cpp  HTMLResponse.cpp  Router.cpp  Server.cpp  URLParameter.cpp  Utilities.cpp  WebSession.cpp  session.cpp
